ECSITE-3:顧客として、商品の詳細情報を見たい(中間コミット)
