# tool/d.py
@@ -156,8 +156,8 @@ def cf(arg1, arg2):
 # http req.
 def req(arg1, arg2):
 
-  # domain = "http://localhost:3001/dev/api/v1"
-  domain = "https://xxr3q09l5d.execute-api.ap-northeast-1.amazonaws.com/dev/api/v1"
+  domain = "http://localhost:3001/dev/api/v1"
+  # domain = "https://xxr3q09l5d.execute-api.ap-northeast-1.amazonaws.com/dev/api/v1"
   authorization = 'dummy'
 
   response = ""
@@ -165,17 +165,29 @@ def req(arg1, arg2):
     endpoint = '/health'
     response = requests.get(domain + endpoint)
 
-  elif arg1 == "preSigned":
-    endpoint = '/generate-presigned-url'
+  elif arg1 == "upload":
+    endpoint = '/presigned-url/upload'
     headers = {'Authorization': authorization}
-    response = requests.get(domain + endpoint, headers=headers)
+    params = {
+      "name": "xxx.jpeg",
+      "type": "image/jpeg"
+    }
+    response = requests.get(domain + endpoint, params=params, headers=headers)
 
-  elif arg1 == "getAll":
+  elif arg1 == "download":
+    endpoint = '/presigned-url/download'
+    headers = {'Authorization': authorization}
+    params = {
+      "name": "xxx.jpeg",
+    }
+    response = requests.get(domain + endpoint, params=params, headers=headers)
+
+  elif arg1 == "goodsList":
     endpoint = '/goods/' + arg2
     headers = {'Authorization': authorization}
     response = requests.get(domain + endpoint, headers=headers)
 
-  elif arg1 == "get":
+  elif arg1 == "goodsDetail":
     endpoint = '/goods/' + arg2
     headers = {'Authorization': authorization}
     response = requests.get(domain + endpoint, headers=headers)
@@ -183,52 +195,26 @@ def req(arg1, arg2):
   elif arg1 == "post":
     endpoint = '/goods/'
     payload = {
-      'id': '1', 
+      'id': 'apple_001', 
       'name': 'りんご', 
-      'explanation': 'おいしいりんごだよ。', 
+      'owner': 'さとう',
+      'explanation': 'りんごは、数ある果物の中でも人々に広く親しまれているものの一つです。その鮮やかな赤や緑の色合いは、見る者の目を引きつけ、果肉のジューシーで甘酸っぱい味は多くの人々の舌を楽しませてきました。りんごにはビタミンCや食物繊維が豊富に含まれており、健康に対するメリットも多いとされています。特に、食物繊維は腸内環境の改善に役立つとされています。また、様々な料理やデザート、ジュースとしての利用方法も幅広く、その利便性と美味しさから多くの家庭の食卓に欠かせない存在となっています。異なる品種や栽培方法によって、りんごの味や食感はさまざま。甘さを追求したものから、爽やかな酸味を持つものまで、好みに合わせて選ぶ楽しさも魅力の一つです。', 
       'price': '100', 
-      'image': 's3://{ownerid}/apple.png', 
+      'image': '20230928T073511479_Apple.jpeg', 
       'category': 'food', 
     }
     headers = {'Authorization': authorization, 'Content-Type': 'application/json'}
     response = requests.post(domain + endpoint, headers=headers, json=payload)
-
-  elif arg1 == "post2":
-    endpoint = '/goods/'
-    payload = {
-      'id': '2', 
-      'name': 'みかん', 
-      'explanation': 'くさったみかん。', 
-      'price': '10', 
-      'image': 's3://{ownerid}/orange.png', 
-      'category': 'food', 
-    }
-    headers = {'Authorization': authorization, 'Content-Type': 'application/json'}
-    response = requests.post(domain + endpoint, headers=headers, json=payload)
-
-
-  elif arg1 == "dummyPost":
-    for _ in range(int(arg2)):
-      endpoint = '/goods/'
-      payload = {
-        'id': generate_random_string(10), 
-        'name': generate_random_string(10), 
-        'explanation': generate_random_string(50), 
-        'price': generate_random_string(10), 
-        'image': generate_random_string(50), 
-        'category': generate_random_string(10), 
-      }
-      headers = {'Authorization': authorization, 'Content-Type': 'application/json'}
-      response = requests.post(domain + endpoint, headers=headers, json=payload)
 
   elif arg1 == "put":
     endpoint = '/goods/' + arg2
     payload = {
-      'id': '1', 
-      'name': 'みかん', 
-      'explanation': 'くさったみかん。', 
-      'price': '10', 
-      'image': 's3://{ownerid}/orange.png', 
+      'id': 'apple_002', 
+      'name': 'りんご', 
+      'owner': 'さとう',
+      'explanation': 'りんごは、数ある果物の中でも人々に広く親しまれているものの一つです。その鮮やかな赤や緑の色合いは、見る者の目を引きつけ、果肉のジューシーで甘酸っぱい味は多くの人々の舌を楽しませてきました。りんごにはビタミンCや食物繊維が豊富に含まれており、健康に対するメリットも多いとされています。特に、食物繊維は腸内環境の改善に役立つとされています。また、様々な料理やデザート、ジュースとしての利用方法も幅広く、その利便性と美味しさから多くの家庭の食卓に欠かせない存在となっています。異なる品種や栽培方法によって、りんごの味や食感はさまざま。甘さを追求したものから、爽やかな酸味を持つものまで、好みに合わせて選ぶ楽しさも魅力の一つです。', 
+      'price': '100', 
+      'image': '20230928T073511479_Apple.jpeg', 
       'category': 'food', 
     }
     headers = {'Authorization': authorization, 'Content-Type': 'application/json'}
